@@ -3,8 +3,8 @@ Contributors: stiofansisland
 Donate link: http://wpgeodirectory.com/
 Tags: business directory plugin, businesses, directories, directory, directory plugin, geodirectory, geotheme, geotheme to geodirectory, geotheme to geodirectory conversion tool, gt to gd
 Requires at least: 3.1
-Tested up to: 4.3.1
-Stable tag: 1.0.0
+Tested up to: 4.7.3
+Stable tag: 1.0.1
 License: GPLv3
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 
